WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290226
subtitle tracks with no `srclang` show up as " (label)" instead of just "label"
https://bugs.webkit.org/show_bug.cgi?id=290226
Summary
subtitle tracks with no `srclang` show up as " (label)" instead of just "label"
Devin Rousso
Reported
2025-03-21 17:29:14 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2025-03-21 17:31:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42852
EWS
Comment 2
2025-03-23 22:30:56 PDT
Committed
292577@main
(83905fa0a630): <
https://commits.webkit.org/292577@main
> Reviewed commits have been landed. Closing PR #42852 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-23 22:31:15 PDT
<
rdar://problem/147722563
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug