subtitle tracks with no `srclang` show up as " (label)" instead of just "label" https://bugs.webkit.org/show_bug.cgi?id=290226

Reviewed by Eric Carlson.

* Source/WebCore/page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::trackDisplayName):
Only use the localized format string if both parts are valid.

* Source/WebCore/page/CaptionUserPreferences.cpp:
(WebCore::trackDisplayName):
Strip any leading/trailing whitespace from the `label` before deciding whether to use it.

* LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages.html:
* LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages-expected.txt:

Canonical link: https://commits.webkit.org/292577@main