Source/WebCore/page/CaptionUserPreferences.cpp
@@ -217,11 +217,11 @@ static String trackDisplayName(TextTrack* track)
     if (track == &TextTrack::captionMenuAutomaticItem())
         return textTrackAutomaticMenuItemText();
 
-    if (track->label().isEmpty() && track->validBCP47Language().isEmpty())
-        return trackNoLabelText();
-    if (!track->label().isEmpty())
+    if (auto label = track->label().string().trim(isASCIIWhitespace); !label.isEmpty())
         return track->label();
-    return track->validBCP47Language();
+    if (auto languageIdentifier = track->validBCP47Language(); !languageIdentifier.isEmpty())
+        return languageIdentifier;
+    return trackNoLabelText();
 }
 
 String CaptionUserPreferences::displayNameForTrack(TextTrack* track) const
@@ -286,11 +286,11 @@ Vector<RefPtr<TextTrack>> CaptionUserPreferences::sortedTrackListForMenu(TextTra
 
 static String trackDisplayName(AudioTrack* track)
 {
-    if (track->label().isEmpty() && track->validBCP47Language().isEmpty())
-        return trackNoLabelText();
-    if (!track->label().isEmpty())
+    if (auto label = track->label().string().trim(isASCIIWhitespace); !label.isEmpty())
         return track->label();
-    return track->validBCP47Language();
+    if (auto languageIdentifier = track->validBCP47Language(); !languageIdentifier.isEmpty())
+        return languageIdentifier;
+    return trackNoLabelText();
 }
 
 String CaptionUserPreferences::displayNameForTrack(AudioTrack* track) const
